generator/testdata/rpc/errors/unexported-methods/greeter.rpc.go
package testdata

import "context"

// Greeter provides greeting services.
type Greeter interface {
	// greet generates a greeting.
	greet(context.Context, *GreetRequest) (*GreetResponse, error)
}

// GreetRequest is the request for Greeter.GreetRequest.
type GreetRequest struct {
	Name string
}

// GreetResponse is the response for Greeter.GreetRequest.
type GreetResponse struct {
	Greeting string
}
